--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.12.0",
     "react-qr-reader": "^2.2.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-websocket": "^2.1.0"
+    "reactstrap": "^8.1.1",
+    "reconnecting-websocket": "^4.2.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "."
 }
